--- a/src/App.css
+++ b/src/App.css
@@ -1,43 +1,86 @@
+html{ 
+  overflow-y: scroll;
+}
+
+body{
+  font-family: 'Lato';
+  font-style: light;
+  font-weight: 400;
+  font-size: 20px;
+}
+
 .App {
   text-align: center;
+  padding: 100px;
+}
+
+.application{
+  background-color: #eeeeee;
 }
 
 .App-logo {
-  height: 160px;
+  height: 200px;
 }
 
 .App-header {
-  background-color: #222;
   height: 150px;
   padding: 20px;
   color: white;
 }
 
+
 .App-intro {
   font-size: large;
 }
 
-
-[class*="col-"] {
-    float: left;
-    padding: 15px;
-}
-
-.col-1 {width: 8.33%;}
-.col-2 {width: 16.66%;}
-.col-3 {width: 25%;}
-.col-4 {width: 33.33%;}
-.col-5 {width: 41.66%;}
-.col-6 {width: 50%;}
-.col-7 {width: 58.33%;}
-.col-8 {width: 66.66%;}
-.col-9 {width: 75%;}
-.col-10 {width: 83.33%;}
-.col-11 {width: 91.66%;}
-.col-12 {width: 100%;}
-
 .input{
-  margin:auto;
-  width:30%;
-  padding: 10px;
+  display: flex;
+  justify-content: center;
 }
+
+.submit {
+  width: 100%;
+  background-color: white;
+  color: black;
+  border: 2px solid #4CAF50;
+  -webkit-transition-duration: 0.4s;
+  transition-duration: 0.4s;
+}
+
+.submit:hover {
+  background-color: #4CAF50;
+  color: white;
+}
+
+
+
+.Username{
+  font-size: 20px;
+  border: 1px solid  	#C8C8C8;
+  border-radius: 5px;
+  padding-left: 10px;
+}
+
+.Username:hover{
+  border: 1px solid  	#A9A9A9;
+  border-radius: 5px;
+}
+
+.Username:focus{
+  border: 2px solid #2684ff;
+  border-radius: 5px;
+}
+
+.options{
+  color: #808080;
+  width: 300px;
+  border: 0px solid  	#C8C8C8;
+  border-radius: 5px;
+}
+
+.options:hover{
+  border: 0px solid  	#A9A9A9;
+  border-radius: 5px;
+}
+
+
