--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 html{ 
   overflow-y: scroll;
+  background-color: #eeeeee;
 }
 
 body{
@@ -9,51 +10,22 @@ body{
   font-size: 20px;
 }
 
-.App {
-  text-align: center;
-  padding: 100px;
-}
-
-.application{
-  background-color: #eeeeee;
-}
-
 .App-logo {
   height: 200px;
 }
 
-.App-header {
-  height: 150px;
-  padding: 20px;
-  color: white;
+.App {
+  text-align: center;
+  padding: 50px;
 }
-
 
 .App-intro {
   font-size: large;
 }
 
-.input{
-  display: flex;
-  justify-content: center;
-}
-
-.submit {
+.component{
+  margin: auto;
   width: 100%;
-  background-color: white;
-  color: black;
-  border: 2px solid #4CAF50;
-  -webkit-transition-duration: 0.4s;
-  transition-duration: 0.4s;
-}
-
-.submit:hover {
-  background-color: #4CAF50;
-  color: white;
-}
-
-.graphs{
-  
 }
 
 .Username{
@@ -61,6 +33,8 @@ body{
   border: 1px solid  	#C8C8C8;
   border-radius: 5px;
   padding-left: 10px;
+  width: 100%;
+  height: 44px;
 }
 
 .Username:hover{
@@ -74,10 +48,7 @@ body{
 }
 
 .options{
-  color: #808080;
-  width: 300px;
-  border: 0px solid  	#C8C8C8;
-  border-radius: 5px;
+  width:100%;
 }
 
 .options:hover{
@@ -85,4 +56,34 @@ body{
   border-radius: 5px;
 }
 
+.submit{
+  width:100%;
+  height: 44px;
+}
 
+.side{
+  width:10%;
+}
+
+.firstColumn{
+  width:20%;
+}
+
+.secondColumn{
+  width:60%;
+}
+
+@media only screen and (max-width: 1100px) {
+    .side{
+      width:30%;
+    }
+    .firstColumn{
+      width:40%;
+    }
+    .secondColumn{
+      width:100%;
+    }
+    .submit{
+      padding: 100px;
+    }
+}
