--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,12 @@ body{
   border-radius: 5px;
 }
 
+.loading{
+    margin:auto;
+    width: 15%;
+    padding: 10px 0px 10px 0px;
+}
+
 .submit{
   width:100%;
   height: 44px;
