--- a/src/App.css
+++ b/src/App.css
@@ -8,15 +8,12 @@ body{
   font-style: light;
   font-weight: 400;
   font-size: 20px;
-}
-
-.App-logo {
-  height: 200px;
+  padding-top:7%;
 }
 
 .App {
   text-align: center;
-  padding: 50px;
+  padding: 20px;
 }
 
 .App-intro {
@@ -68,7 +65,7 @@ body{
 }
 
 .side{
-  width:10%;
+  width:5%;
 }
 
 .firstColumn{
@@ -76,7 +73,7 @@ body{
 }
 
 .secondColumn{
-  width:60%;
+  width:70%;
 }
 
 .errorMessage{
@@ -84,6 +81,13 @@ body{
 }
 
 @media only screen and (max-width: 1100px) {
+
+    body{
+      padding-top:30px;
+    }
+    img{
+      width:50%;
+    }
     .side{
       width:30%;
     }
