--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,11 @@ body{
   height: 44px;
 }
 
+.icons{
+  width:15%;
+  height:15%;
+}
+
 .Username:hover{
   border: 1px solid  	#A9A9A9;
   border-radius: 5px;
