--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,11 @@ body{
   font-style: light;
   font-weight: 400;
   font-size: 20px;
-  padding-top:7%;
+  padding-top:5%;
+  position: absolute;
+  right: -17px;
+  padding-right: 17px;
+
 }
 
 .App {
@@ -34,10 +38,20 @@ body{
   height: 44px;
 }
 
+.region-selector{
+  font-size: 20px;
+  border: 1px solid  	#C8C8C8;
+  border-radius: 5px;
+  padding-left: 10px;
+  width: 100%;
+  background-color: white;
+}
+
 .icons{
   width:15%;
   height:15%;
 }
+
 
 .Username:hover{
   border: 1px solid  	#A9A9A9;
@@ -49,11 +63,11 @@ body{
   border-radius: 5px;
 }
 
-.options{
+.champion-selector{
   width:100%;
 }
 
-.options:hover{
+.champion-selector:hover{
   border: 0px solid  	#A9A9A9;
   border-radius: 5px;
 }
@@ -67,6 +81,7 @@ body{
 .submit{
   width:100%;
   height: 44px;
+  padding-top:400px;
 }
 
 .side{
@@ -85,23 +100,31 @@ body{
   text-align: center;
 }
 
-@media only screen and (max-width: 1100px) {
+@media only screen and (max-width: 1192px) {
 
     body{
       padding-top:30px;
     }
-    img{
-      width:50%;
-    }
+ 
     .side{
-      width:30%;
+      width:60%;
     }
+
+    .App{
+      width:200px;
+      left: 0px;
+
+      position:fixed;
+    }
+    
     .firstColumn{
       width:40%;
     }
+
     .secondColumn{
       width:100%;
     }
+
     .submit{
       padding: 100px;
     }
